# agent-safety-monitor

./: .env.schema  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  coding_agent_monitor_plan.md  pyproject.toml
.github/workflows/: docker-build.yml  docs-ci.yml  frontend-ci.yml  python-ci.yml
api/: main.py
api/routes/: results.py  sessions.py
benchmark/: db.py  labels.json  pricing.py  report.py  run.py
benchmark/sessions/: bench-deceptive-fail-001.jsonl  bench-deceptive-fail-002.jsonl  bench-deceptive-pass-001.jsonl  bench-deceptive-pass-002.jsonl  bench-deceptive-pass-003.jsonl  bench-supply-fail-001.jsonl  bench-supply-fail-002.jsonl  bench-supply-pass-001.jsonl  bench-supply-pass-002.jsonl  bench-supply-pass-003.jsonl
frontend/: eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/api/: index.ts  types.ts
frontend/src/components/: FailureBadge.vue  ScoreBar.vue  TranscriptViewer.vue
frontend/src/views/: SessionDetail.vue  SessionList.vue
monitor/: db.py  ingest.py  run.py  scorers.py  tasks.py
samples/: clean_session.jsonl  unsafe_deceptive.jsonl  unsafe_exfiltration.jsonl  unsafe_privilege_escalation.jsonl  unsafe_scope_creep.jsonl  unsafe_secret_leak.jsonl  unsafe_supply_chain.jsonl
tests/: conftest.py  test_api.py  test_db.py  test_ingest.py  test_scorers.py  test_tasks.py
tests/fixtures/: tiny_session.jsonl
