[project]
name = "agent-safety-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "inspect-ai>=0.3.225",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

